syntax = "proto3";

package contents;

option go_package = "go_package/contentpb";

service Nexivil{
    rpc ListContents (ContentRequest) returns (stream ContentResponse) {};
}

message ContentRequest {
    string project_name = 1;
}

message ContentResponse {
    int32 id = 1;
    string project_name = 2;
    string content = 3;
}